Fixed typo, added some missing C<> tags and wrote two new examples

--- a/Type/Date.pod
+++ b/Type/Date.pod
@@ -8,8 +8,8 @@
 
 A C<Date> is an immutable object identifying a day in the Gregorian calendar.
 
-Date objects support addition and subtraction of integers, where an
-integer is interpreted as the number of days. You can compare Date objects
+C<Date> objects support addition and subtraction of integers, where an
+integer is interpreted as the number of days. You can compare C<Date> objects
 with the numeric comparison operators C<< ==, <, <=, >, >=, != >>.
 Their stringification in C<YYYY-MM-DD> format means that comparing them
 with the string operators C<eq, lt, le> etc. also gives the right result.
@@ -77,7 +77,7 @@ Usage:
 
     DATE.later(DELTA)
 
-Returns a Date object based on the current one, but with a date delta
+Returns a C<Date> object based on the current one, but with a date delta
 applied. The date delta can be passed as a named argument where the argument
 name is the unit.
 
@@ -88,8 +88,7 @@ the C<later> method.
 Please note that the special ":2nd" named parameter syntax can be a compact
 and self-documenting way of specifying the delta
 
-    say Date.new('2015-12-24').later(:2years);
-        # 2017-12-24
+    say Date.new('2015-12-24').later(:2years);  # 2017-12-24
 
 Since addition of several different time units is not commutative, only one
 unit may be passed.
@@ -112,7 +111,7 @@ Usage:
 
     DATE.earlier(DELTA)
 
-Returns a Date object based on the current one, but with a date delta
+Returns a C<Date> object based on the current one, but with a date delta
 towards the past applied. See L<#method later> for usage.
 
 =head2 method truncated-to
@@ -145,17 +144,21 @@ Usage:
 
 Returns a C<Date> of the following day.
 
+    say Date.new("2016-02-28").succ;   # 2016-02-29
+
 =head2 method pred
 
 Defined as:
 
-    method pred(Date:D:) return Date:D
+    method pred(Date:D:) returns Date:D
 
 Usage:
 
     DATE.pred
 
 Returns a C<Date> of the previous day.
+
+    say Date.new("2016-01-01").pred;   # 2015-12-31
 
 =head2 method Str
 
