Fixed broken link

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -65,7 +65,7 @@ is bound to.
 =begin code :allow<B L>
 :(B<$a:> @b, %c)       # first argument is the invocant
 
-L<class> Foo {
+L<class|/syntax/class> Foo {
     method whoami (B<$me:>) {
         "Well I'm class B<$me>.^L<name>(), of course!"
     }
