Fix printf arguments

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -425,11 +425,11 @@ no-ops (the semantics are still being determined).
 
 Examples:
 
- printf('%c', [97]);                  # a
- printf("%.2f", [1.969]);             # 1.97
- printf("%+.3f", [3.141592]);         # +3.142
- printf('%2$d %1$d', [12, 34]);       # 34 12
- printf("%x", [255]);                 # ff
+ printf('%c', 97);                  # a
+ printf("%.2f", 1.969);             # 1.97
+ printf("%+.3f", 3.141592);         # +3.142
+ printf('%2$d %1$d', 12, 34);       # 34 12
+ printf("%x", 255);                 # ff
 
 Special case:  printf("<b>%s</b>\n", "Perl 6")  will not work use either of the following:
 
