Show BUILDALL example returning built object
"It doesn't seem clear from the documentation that returning from BUILDALL would matter."

See http://www.perlmonks.org/?node_id=1163681

--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -482,6 +482,8 @@ class MyClass {
         callsame;   # call the parent classes (or default) BUILDALL
 
         # you can do final checks here.
+        
+        self # return the fully built object
     }
 }
 =end code
