Fix mistake in BUILDALL example code
Immediate `nextsame` makes a method a no op. Switched to `callsame`. This revealed that the BUILDALL example failed to return `self`.

--- a/Language/traps.pod
+++ b/Language/traps.pod
@@ -102,8 +102,9 @@ C<BUILDALL> mechanism instead:
         has $.x;
         has $.y;
         method BUILDALL(|c) {
-            nextsame;
+            callsame;
             $!y = 18;
+            self
         }
     }
 
