Clarify IO::Path.Str, see http://irclog.perlgeek.de/perl6/2016-05-22#i_12525721

--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -102,8 +102,11 @@ Returns the full path as a string.
 
     method Str(IO::Path:D:)
 
-Returns the full path as a string. If the path object was constructed from a
-single string, the method Str will return that string.
+Returns the complete text that was used to create the path as a string, whether
+it was given as a single string or as named arguments.
+
+    say IO::Path.new(basename => "foo", dirname => "/bar").Str  # /bar/foo
+    say IO::Path.new("/bar/foo").Str                            # /bar/foo
 
 =head2 method open
 
