Fix a typo in the IO::Special page

--- a/Type/IO/Special.pod
+++ b/Type/IO/Special.pod
@@ -68,7 +68,7 @@ The 'size' file test operator, always returns 0.
 
     method l(IO::Special:D:) returns Bool
 
-The 'symbolic links' file test operator, always returns C<False>/
+The 'symbolic links' file test operator, always returns C<False>.
 
 =head2 method r
 
