--- a/Type/Routine.pod
+++ b/Type/Routine.pod
@@ -62,8 +62,8 @@ Restores the original routine after it has been wrapped with L<wrap>.
 
 Returns C<True> if the routine is a stub
 
-    say (sub f() { ... }).yada      # True
-    say (sub g() { 1;  }).yada      # False
+    say (sub f() { ... }).yada;      # True
+    say (sub g() { 1;  }).yada;      # False
 
 =head2 trait is cached
 
