Fixed typo and added a missing C<>

--- a/Type/Parameter.pod
+++ b/Type/Parameter.pod
@@ -177,7 +177,7 @@ in same the signature:
     c("four",5,"six");  # Fails when binding $y, wants Str, not Int
 
 Type captures may be used at the same time as
-L<type costraints|/type/Signature#Type_Constraints>.
+L<type constraints|/type/Signature#Type_Constraints>.
 
     sub d(::T Numeric $x, T $y);
     d(4,5);             # OK
@@ -189,6 +189,6 @@ L<type costraints|/type/Signature#Type_Constraints>.
 
 If the parameter has a
 L<sub-signature|/type/Signature#Destructuring_Parameters>,
-returns a Signature object for it.  Otherwise returns C<Any>.
+returns a C<Signature> object for it.  Otherwise returns C<Any>.
 
 =end pod
