Fixed three broken links

--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -87,7 +87,7 @@ The remaining filetests in Perl 5 do not appear to be implemented
 in Perl 6.
 
 The documentation for this can be found at
-L<https://doc.perl6.org/type/IO::FileTestable#File_Test_operators>.
+L<https://doc.perl6.org/type/IO::Path#File_Test_operators>.
 
 There is more information on reading and writing files at
 L<https://doc.perl6.org/language/io>. Also, the section on C<open()>
@@ -616,9 +616,8 @@ may not be the best way to go for this.
 Was never a builtin function in Perl 5 in the first place. In Perl 6,
 typically, one declares functions as exportable or not, and all the
 exportable ones are exported. Nevertheless, selective importing is
-possible, but beyond the scope of this document. For details, see L<-
-https://doc.perl6.org/language/5to6#Importing_specific_functions_from-
-_a_module>.
+possible, but beyond the scope of this document. For details, see 
+L<https://doc.perl6.org/language/5to6-nutshell#Importing_specific_functions_from_a_module>.
 
 =head2 index
 
@@ -1317,7 +1316,7 @@ Not currently documented, but will likely wind up in C<IO::Socket>.
 =item sort SUBNAME LIST
 
 C<sort> exists in Perl 6, but is somewhat different. C<$a> and C<$b> are
-no longer special (See L<5to6-perlvar.pod>) and sort routines no
+no longer special (See L<5to6-perlvar>) and sort routines no
 longer return positive integers, negative integers, or 0, but rather
 C<Order::Increase>, C<Order::Same>, or C<Order::Decrease> objects. See
 L<https://doc.perl6.org/routine/sort> for details. May also be used as a
