make a working example

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -941,11 +941,25 @@ match and so usually contains objects of type L<Match>.
     say $/.Str;         # abc
 
 The C<Grammar.parse> method also sets the caller's C<$/> to the resulting
-L<Match> object.
+L<Match> object.  For the following code:
 
-    use XML;
-    XML.parse(slurp "filename.xml")
+    use XML::Grammar; # panda install XML
+    XML.Grammar.parse("<p>some text</p>");
     say $/;
+
+the output is:
+
+｢<p>some text</p>｣
+ root => ｢<p>some text</p>｣
+  name => ｢p｣
+  child => ｢some text｣
+   text => ｢some text｣
+   textnode => ｢some text｣
+ element => ｢<p>some text</p>｣
+  name => ｢p｣
+  child => ｢some text｣
+   text => ｢some text｣
+   textnode => ｢some text｣
 
 =head4 X«Positional Attributes|variable,$0;variable,$1;variable,@()»
 
