Added docs for method 'isa' in Mu. #perl6++

--- a/Type/Mu.pod
+++ b/Type/Mu.pod
@@ -32,6 +32,22 @@ C<False> even for instances:
     sub fails() { fail 'oh noe' };
     say fails().defined;            # False
 
+=head2 routine isa
+
+    multi method isa(Mu $type)      returns Bool:D
+    multi method isa(Str:D $type)   returns Bool:D
+
+Returns C<True> if the invocant is an instance of class C<$type>, a subset type or a derived class (through inheritance) of C<$type>.
+
+    my $i = 17;
+    say $i.isa("Int");   # True
+    say $i.isa(Any);     # True
+
+A more idiomatic way to do this is to use the smartmatch operator L<~~|/routine/~~> instead.
+
+    my $s = "String";
+    say $s ~~ Str;       # True
+
 =head2 routine Bool
 
     multi sub    Bool(Mu) returns Bool:D
