fix minor typos

--- a/Language/mop.pod
+++ b/Language/mop.pod
@@ -199,7 +199,7 @@ as well. So if you write C<my $t = MyType; ... ; $t.^compose> you are
 composing the Scalar that the C<$>-sigiled variable implies, not C<MyType>.
 
 The consequence is that you need to have a rather detailed understanding of
-the subleties of Perl 6 in order to avoid pitfalls when working with the MOP,
+the subtleties of Perl 6 in order to avoid pitfalls when working with the MOP,
 and can't expect the same "do what I mean" convenience that ordinary Perl 6
 code offers.
 
