--- a/Type/IO/Special.pod
+++ b/Type/IO/Special.pod
@@ -31,7 +31,7 @@ This returns a string which identifies the object.
 
     method Str(IO::Special:D:)
 
-This returns '<STDIN>', '<STDOUT>' or '<STDERR>' as approriate.
+This returns '<STDIN>', '<STDOUT>' or '<STDERR>' as appropriate.
 
 =head2 method IO
 
