--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -546,7 +546,7 @@ X<Hyper method call operator>. Will call a method on all elements of a C<List> o
     my @b = @a».ord;                  # [97, 98, 99]
     sub foo(Str:D $c){ $c.ord * 2 };  # The first parameter of a method is the invocant.
     say @a».&foo;                     # So we can pretend to have a method call with a sub that got a good first positional argument.
-    say @a».&({ .ord});               # Blocks have an implicit positional arguments that lands in $_. The latter can be obmitted for method calls.
+    say @a».&({ .ord});               # Blocks have an implicit positional arguments that lands in $_. The latter can be omitted for method calls.
 
 =head2 X«postfix C<.postfix>
     |postfix,.postfix;postcircumfix,.( );postcircumfix,.[ ];postcircumfix,.{ };postcircumfix,.< >»
