Another broken link fixed

--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -547,7 +547,7 @@ instances and roles are meant for managing behavior and code reuse.
             self.L<perl>; # very primitive serialization
         }
         method deserialize($buf) {
-            L<EVAL> $buf; # reverse operation to .perl
+            L<EVAL|/routine/EVAL> $buf; # reverse operation to .perl
         }
     }
 
