Make term mixin searchable (Closes #542)

--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -791,7 +791,7 @@ Logging[$*OUT].log(debug, 'here we go');        # [DEBUG] here we go
 You can have multiple roles of the same name, but with different signatures;
 the normal rules of multi dispatch apply for choosing multi candidates.
 
-=head2 Mixins of Roles
+=head2 X<Mixins> of Roles
 
 Roles can be mixed into objects. A role's given attributes and methods will be
 added to the methods and attributes the object already has. Multiple mixins and
