--- a/Perl6/00-running.pod
+++ b/Perl6/00-running.pod
@@ -63,8 +63,9 @@ attempts to document all those currently in use.
 
 =head2 Module Loading
 
-=defn C<RAKUDOLIB>, C<PERL6LIB> (I<Str>; F<src/core/Inc.pm>)
-Appends a comma-delimited list of paths to C<@INC>. C<RAKUDOLIB> is evaluated first.
+=item C<RAKUDOLIB>, C<PERL6LIB> (I<Str>; F<src/core/Inc.pm>)
+
+  Appends a comma-delimited list of paths to C<@INC>. C<RAKUDOLIB> is evaluated first.
 
 =defn C<RAKUDO_MODULE_DEBUG> (I<Bool>; F<src/Perl6/ModuleLoader.pm>)
 Causes the module loader to print debugging information to standard error.
