--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -72,6 +72,20 @@ A generalized form of C<pair notation>.  They all start with the colon, like:
 
 Also see L<#Adverb> and L<#Colon Pair and Colon List>.
 
+=head1 Allomorph
+
+A type that has two related values which may be used depending on the
+context. The I<allomorph> types L<IntStr|/type/IntStr>, L<NumStr|/type/NumStr>,
+L<RatStr|/type/RatStr> and L<ComplexStr|/type/ComplexStr> may be created
+as a result of parsing a quoted string:
+
+	say <42>.WHAT;     # (IntStr)
+	say <42.1e0>.WHAT; # (NumStr)
+	say <42.1>.WHAT;   # (RatStr)
+	say <42+0i>.WHAT;  # (ComplexStr)
+
+Or they may be created explicitly with differing string and numeric values.
+
 =head1 Anonymous
 
 A subroutine, method or submethod is called I<anonymous> if it can't be
