--- a/Language/classtut.pod
+++ b/Language/classtut.pod
@@ -8,7 +8,7 @@
 
 Perl 6 has a rich built in syntax for the definition and use of classes
 for object oriented programming, allowing for the definition of state
-(as L<attributes|#State>,) and behaviour (as L<methods|#Methods>>,)
+(as L<attributes|#State>,) and behaviour (as L<methods|#Methods>,)
 in the objects of a class.
 
 A simple class is provided with a default constructor, that allows the
