Fixed comment, minor wording edit

--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -798,15 +798,15 @@ common modifiers that you will use are probably C<:g> and C<:i>.
 
 Ordinarily substitutions are only made once in a given string, but adding the
 C<:g> modifier overrides that behavior, so that replacements are made
-everywhere possible.  Substitutions will never overlap, so for instance:
+everywhere possible.  Substitutions are non-recursive, so for instance:
 
     $_ = q{I can say "banana" but I don't know when to stop};
-    s:g/na/nana,/;  # Substitute 'nana' for 'na'
-    .say;           # ... "banana,nana,"
+    s:g/na/nana,/;  # Substitute 'nana,' for 'na'
+    .say;           # I can say "banana,nana," but I don't ...
 
 Even though the substitution doubled the number of C<na>'s in the string, the
 substitution only took place twice.  Which is to say the substitution only
-applies to the original string, the targeted string does not count.
+applies to the original string; the targeted string does not count.
 
 =item Insensitive adverb C<:i>
 
