--- a/Type/IntStr.pod
+++ b/Type/IntStr.pod
@@ -6,7 +6,7 @@
 
     class IntStr is Int is Str 
 
-The dual value types (often referred to as L<allomorphs|/language/glossay#Allomorph>
+The dual value types (often referred to as L<allomorphs|/language/glossary#Allomorph>
 allow for the representation of a value as both a string and a numeric type, typically
 they will be created for you when the context is "stringy" but they can be determined
 to be numbers, such as in some L<quoting constructs|/language/quoting>:
