fix small double is typo

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -643,7 +643,7 @@ a 1;        # Int 1\n Any 1
 
 As mentioned earlier, multi subs are not the only situation in which
 X<C<callwith>|callwith>, X<C<callsame>|callsame>, X<C<nextwith>|nextwith> and X<C<nextsame>|nextsame> can be helpful.
-One is is for dispatching to wrapped routines:
+One is for dispatching to wrapped routines:
 
 =begin code
 # enable wrapping:
