--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -466,7 +466,7 @@ Note that at the moment it's not as tested and developed as C support.
 The C<NativeCall> library exports several subroutines to help you work with
 data fron native libraries.
 
-=head2 X<sub nativecast|sub>
+=head2 sub X<nativecast|sub>
 
     sub nativecast($target-type, $source) is export(:DEFAULT)
 
@@ -481,7 +481,7 @@ a C<subroutine> will be returned which will call the native function pointed to 
 in the same way as a subroutine declared with the C<native> trait.  This is described in
 L<Function Pointers|#Function_Pointers>.
 
-=head2 X<sub cglobal|sub>
+=head2 sub X<cglobal|sub>
 
 	sub cglobal($libname, $symbol, $target-type) is export is rw
 
@@ -489,7 +489,7 @@ This returns a L<Proxy|/type/Proxy> object that provides access to the C<extern>
 is exposed by the specified library. The library can be specified in the same ways that
 they can be to the C<native> trait.
 
-=head2 X<sub nativesizeof|sub>
+=head2 sub X<nativesizeof|sub>
 
     sub nativesizeof($obj) is export(:DEFAULT)
 
