Fix some typos in the docs for the allomorph types

--- a/Type/ComplexStr.pod
+++ b/Type/ComplexStr.pod
@@ -6,7 +6,7 @@
 
     class ComplexStr is Complex is Str 
 
-The dual value types (often referred to as L<allomorphs|/language/glossary#Allomorph>
+The dual value types (often referred to as L<allomorphs|/language/glossary#Allomorph>)
 allow for the representation of a value as both a string and a numeric type, typically
 they will be created for you when the context is "stringy" but they can be determined
 to be numbers, such as in some L<quoting constructs|/language/quoting>:
@@ -37,7 +37,7 @@ directly the values can be whatever is required:
 
     method Numeric
 
-The numeric coercion that is applied when the C<ComplexStr> is used in a numeric context,
+The numeric coercion is applied when the C<ComplexStr> is used in a numeric context,
 such as a numeric comparison or smart match against a numeric value. It will return
 the C<Complex> value.
 
