Add qww and qqww
Also move the « » from qqw to qqww
Not sure if there are appropriate unicode variants

This may cover #533

--- a/Language/quoting.pod
+++ b/Language/quoting.pod
@@ -140,7 +140,19 @@ It's easier to write and to read this:
 
     my @directions = <left right up down>;
 
-=head2 X<Word quoting with interpolation: qqw|quote,qqw;quote,« »>
+=head2 X<Word quoting with quote protection: qww|quote,qww>
+
+The C<qw> form of word quoting will treat quote characters literally, leaving them in the
+resulting words:
+
+    say qw{"a b" c}.perl; # ("\"a", "b\"", "c")
+
+Thus, if you wish to preserve quoted sub-strings as single items in the resulting words
+you need to use the C<qww> variant:
+
+    say qww{"a b" c}.perl; # ("a b", "c")
+
+=head2 X<Word quoting with interpolation: qqw|quote,qqw>
 
 The C<qw> form of word quoting doesn't interpolate variables:
 
@@ -153,11 +165,22 @@ you need to use the C<qqw> variant:
     my @list = qqw{$a b c};
     say @list;                # 42 b c
 
+=head2 X<<<Word quoting with interpolation and quote protection: qqww|quote,qqww;quote,<< >>;quote,« »>>>
+
+The C<qqw> form of word quoting will treat quote characters literally, leaving them in the
+resulting words:
+
+    my $a = 42; say qqw{"$a b" c}.perl; # ("\"42", "b\"", "c")
+
+Thus, if you wish to preserve quoted sub-strings as single items in the resulting words
+you need to use the C<qqww> variant:
+
+    my $a = 42; say qqww{"$a b" c}.perl; # ("42 b", "c")
+
 or equivalently:
 
-    my $a = 42;
-    my @list = «$a b c»;
-    say @list;                # 42 b c
+    my $a = 42; say <<"$a b" c>>.perl; # ("42 b", "c")
+    my $a = 42; say «"$a b" c».perl; # ("42 b", "c")
 
 =head2 X<Shell quoting: qx|quote,qx>
 
