Fixed three broken links

--- a/Type/Mix.pod
+++ b/Type/Mix.pod
@@ -11,7 +11,7 @@ particular order that each have a real-number weight assigned to them. (For
 I<mutable> mixes, see L<MixHash> instead.)
 
 C<Mix>es are often used for performing weighted random selections - see
-L<.roll|method roll>.
+L<.roll|roll>.
 
 Objects/values of any type are allowed as mix elements. Within a C<Mix>, items
 that would compare positively with the L<===> operator are considered the same
@@ -63,7 +63,7 @@ the (cumulative) values become the associated numeric weights:
 TODO: Expand this section (using the corresponding section in lib/Type/Bag.pod
 as a guide) after ab5tract's set/bag/mix operator redesign.
 
-See L<setbagmix#Set/Bag Operators> for a complete list of set and bag operators
+See L<Set/Bag Operators|/language/setbagmix#Set/Bag_Operators> for a complete list of set and bag operators
 with detailed explanations.
 
 =head2 sub mix
