--- a/Type/MixHash.pod
+++ b/Type/MixHash.pod
@@ -72,7 +72,7 @@ lib/Type/BagHash.pod as a guide) after ab5tract's set/bag/mix operator redesign.
 
 =end comment
 
-See L<setbagmix#Set/Bag Operators> for a complete list of set and bag operators
+See L<Set/Bag Operators|/language/setbagmix#Set/Bag_Operators> for a complete list of set and bag operators
 with detailed explanations.
 
 =head1 See Also
