Fixed error in the documentation for method start. RabidGravy++

--- a/Type/Proc/Async.pod
+++ b/Type/Proc/Async.pod
@@ -117,7 +117,7 @@ the program through the C<.print>, C<.say> and C<.write> methods.
     method start(Proc::Async:D:, :$scheduler = $*SCHEDULER, :$cwd = $*CWD) returns Promise:D
 
 Initiates spawning of the external program. Returns a promise that will be
-kept with a L<Proc::Status|/type/Proc::Status> object once the external
+kept with a L<Proc|/type/Proc> object once the external
 program exits, and that will be broken if the program cannot be started.
 
 If C<start> is called on a Proc::Async object on which it has already been
