Two broken links fixed

--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -351,7 +351,7 @@ for the types of messages that you can send to control the throttle.
 
 The :status named parameter optionally specifies a Supply that will receive
 any status messages.  If specified, it will at least send one status message
-after the original Supply is exhausted.  See L<status message> below.
+after the original Supply is exhausted.  See L<status message|#status_message> below.
 
 The :bleed named parameter optionally specifies a Supply that will receive
 any values that were either explicitly bled (with the B<bleed> control
@@ -574,7 +574,7 @@ supplies are done.  Can also be called as a class method.
     method zip-latest(Supply @*supplies, :&with = &[,], :$initial) returns Supply:D
 
 Creates a supply that emits combined values as soon as there is a new value
-seen on B<any> of the supplies.  By default, C<Lists|/type/List> are
+seen on B<any> of the supplies.  By default, L<Lists|/type/List> are
 created, but this can be changed by specifying your own combiner with the
 :with parameter.  The optional :initial parameter can be used to indicate
 the initial state of the combined values.  By default, all supplies have to
