Remove tiny typo

--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -376,7 +376,7 @@ The C<native> trait accepts the library name or the full path.
     constant LIBMYSQL = 'mysqlclient';
     constant LIBFOO = '/usr/lib/libfoo.so.1';
     # and later
-    sub mysql_affectied_rows( .. ) returns int32 is native(LIBMYSQL);
+    sub mysql_affected_rows( .. ) returns int32 is native(LIBMYSQL);
     sub bar is native(LIBFOO);
 
 You can also put an incomplete path like './foo' and NativeCall will automatically put
