clarify that :delete can create holes that are bit skipped by iteration

--- a/Language/subscripts.pod
+++ b/Language/subscripts.pod
@@ -430,7 +430,8 @@ mechanism.
 
 =head2 X<:delete|subscript adverb,:delete>
 
-Delete the element from the collection, in addition to returning its value.
+Delete the element from the collection or, if supported by the collection,
+creates a hole at the given index, in addition to returning its value.
 
     my @tens = 0, 10, 20, 30;
     dd @tens[3]:delete;     #-> 30
@@ -440,6 +441,16 @@ Delete the element from the collection, in addition to returning its value.
     dd %fruit<apple>:delete;         #-> 5
     dd %fruit<peach orange>:delete;  #-> (17, 10)
     dd %fruit;                       #-> {banana => 4}<>
+
+The created holes can be tested for with C<:exists> but iteration will not skip
+them and produce undefined values instead.
+
+    my @a = 1,2,3;
+    @a[1]:delete;
+    say @a[1]:exists;
+    # OUTPUT«False␤»
+    .say for @a;
+    # OUTPUT«1␤(Any)␤3␤»
 
 With the negated form of the adverb, the element is not actually deleted. This
 means you can pass a flag to make it conditional:
