Fix a typo "gitub" to "github"

--- a/Language/glossary.pod
+++ b/Language/glossary.pod
@@ -719,7 +719,7 @@ See L<#Attribute>.
 
 =head1 Pull Request
 
-A feature of L<https://gitub.com|Github> that allows you to make patches
+A feature of L<https://github.com> that allows you to make patches
 to be easily applied using the Github user interface.
 
 =head1 QAST
