clarify interaction between assignment of Nil and subscripts

--- a/Language/subscripts.pod
+++ b/Language/subscripts.pod
@@ -442,8 +442,10 @@ creates a hole at the given index, in addition to returning its value.
     dd %fruit<peach orange>:delete;  #-> (17, 10)
     dd %fruit;                       #-> {banana => 4}<>
 
-The created holes can be tested for with C<:exists> but iteration will not skip
-them and produce undefined values instead.
+Note that assigning C<Nil> will revert the container at the given index to it's
+default value. It will not create a hole. The created holes can be tested for
+with C<:exists> but iteration will not skip them and produce undefined values
+instead.
 
     my @a = 1,2,3;
     @a[1]:delete;
