Added docs for method default in class Hash

--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -316,6 +316,30 @@ Note that such a initialization could also be written as
 
     my %inv .= push: %wc.invert.unique;
 
+=head2 method default
+
+Defined as:
+
+    method default
+
+Usage:
+
+    Hash.default
+
+Returns the default value of the invocant, i.e. the value which is returned 
+when a non existing key is used to access an element in the C<Hash>.
+Unless the C<Hash> is declared as having a default value by using the 
+L<is default|/routine/is default> trait the method returns the type object 
+C<(Any)>.
+
+    my %h1 = 'apples' => 3, 'oranges' => 7;
+    say %h1.default;                                       # (Any)
+    say %h1{'bananas'};                                    # (Any)
+
+    my %h2 is default(1) = 'apples' => 3, 'oranges' => 7;
+    say %h2.default;                                       # 1
+    say %h2{'apples'} + %h2{'bananas'};                    # 4
+
 =head1 Subscript Adverbs
 
 Some methods are implemented as adverbs on subscripts.
