Point out a way to detect OS in use

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -1106,7 +1106,8 @@ Other compile-time variables:
                       | "home directory" cannot be determined it will be L<Nil>
     ------------------+--------------------------------------------
     $*SPEC            | The appropriate L<IO::Spec> sub-class for the platform that
-                      | the program is running on.
+                      | the program is running on. For OS-specific code, simply use smartmatch:
+                      | C<say "We are on Windows!" if $*SPEC ~~ IO::Spec::Win32>
     ------------------+--------------------------------------------
     $*TMPDIR          | An L<IO::Path> object representing the "system temporary directory"
     ------------------+--------------------------------------------
