--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -741,7 +741,8 @@ Flattens objects of type L<Capture>, L<Pair>, L<List> L<Map> and L<Hash>
 into an argument list.
 
 Outside of argument lists, it returns a L<Slip|/type/Slip>, which makes it
-flatten into the outer list.
+flatten into the outer list. Inside argument list L<C<Positional>s|/type/Positional> are turned
+into positional arguments and L<C<Assiciative>s|/type/Associative> are turned into named arguments.
 
 =head2 prefix C«+^»
 
