--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -742,7 +742,7 @@ into an argument list.
 
 Outside of argument lists, it returns a L<Slip|/type/Slip>, which makes it
 flatten into the outer list. Inside argument list L<C<Positional>s|/type/Positional> are turned
-into positional arguments and L<C<Assiciative>s|/type/Associative> are turned into named arguments.
+into positional arguments and L<C<Associative>s|/type/Associative> are turned into named arguments.
 
 =head2 prefix C«+^»
 
