--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -741,7 +741,7 @@ Flattens objects of type L<Capture>, L<Pair>, L<List> L<Map> and L<Hash>
 into an argument list.
 
 Outside of argument lists, it returns a L<Slip|/type/Slip>, which makes it
-flatten into the outer list. Inside argument list L<C<Positional>s|/type/Positional> are turned
+flatten into the outer list. Inside L<argument list|/language/list#Argument_List_(Capture)_Context> L<C<Positional>s|/type/Positional> are turned
 into positional arguments and L<C<Associative>s|/type/Associative> are turned into named arguments.
 
 =head2 prefix C«+^»
