Fixed two broken links

--- a/Language/subscripts.pod
+++ b/Language/subscripts.pod
@@ -492,7 +492,7 @@ See also the L<pairs> routine.
 
 Return both the index/key and the value of the element, in the form of a
 L<List>, and silently skip nonexistent elements. When used on a
-L<slice|#Slicing>, the return value is a single flat list of interleaved keys
+L<slice|#Slices>, the return value is a single flat list of interleaved keys
 and values:
 
     my @tens = 0, 10, 20, 30;
@@ -702,7 +702,7 @@ L<Array> type), you'll have to make sure to return it in the form of an
 item container that evaluates to the element's value when read, and updates
 it when assigned to. (Remember to use C<return-rw> or the C<is rw> routine
 trait to make that work; see the L<example
-|/language/subscripting#Custom_type_example>.)
+|/language/subscripts#Custom_type_example>.)
 
 =head3 method EXISTS-POS
 
