--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -95,6 +95,8 @@ sub baz (B<L<Str>>) { "Got passed a Str" }
 
 Type constraints may also be L<type captures|/type/Signature#Type_Captures>.
 
+X<where>
+
 In addition to those I<nominal> types, additional constraints can
 be placed on parameters in the form of code blocks which must return
 a true value to pass the type check
