link to definition of where

--- a/Language/typesystem.pod
+++ b/Language/typesystem.pod
@@ -134,9 +134,9 @@ TODO
 
 =head2 C<subset>
 
-A X<C<subset>|subset> declares a new type that will re-dispatch to its base type. If a
-C<where> clause is supplied any assignment will be checked against the given
-code object.
+A X<C<subset>|subset> declares a new type that will re-dispatch to its base
+type. If a L<C<where>|/type/Signature#where> clause is supplied any assignment
+will be checked against the given code object.
 
     subset Positive of Int where * > -1;
     my Positive $i = 1;
