show how to constrain function references

--- a/Type/Signature.pod
+++ b/Type/Signature.pod
@@ -161,6 +161,16 @@ say limit-lines "a \n b \n c", Int; # "a \n b \n c"
 For explicitly indicating the normal behaviour, C<:_> can be used, but this is
 unnecessary. C<:(Num:_ $)> is the same as C<:(Num $)>.
 
+=head3 X«Constraining signatures of Callables|function reference (constrain)»
+
+To constrain block and subroutine references based on their signature write
+the signature after the argument name.
+
+    sub f(&c:(Int, Str)) { say c(10, 'ten') }; 
+    sub g(Int $i, Str $s){ $s ~ $i };
+    f(&g);
+    # OUTPUT«ten10␤»
+
 =head3 X«Constraining Return Types|-->;returns»
 
 The token C<-->> followed by a type will force a type check on successful
