Added docs for X::Caller::NotDynamic and fixed a broken link relating to that

--- a/Type/Variable.pod
+++ b/Type/Variable.pod
@@ -54,7 +54,7 @@ without being in an inner lexical scope.
     {
         # not dynamic
         my $x;
-        introspect()    # dies with an exception of L<type X::Caller::NotDynamic|/type/X::CallerNotDynamic>
+        introspect()    # dies with an exception of L<type X::Caller::NotDynamic|/type/X::Caller::NotDynamic>
     }
 =end code
 
