Fix the example of the open method

--- a/Type/IO.pod
+++ b/Type/IO.pod
@@ -155,7 +155,7 @@ Write-related methods on the returned C<IO::Handle> object will fail in this
 mode:
 
     my $fh = open("test");   # the file "test" already exists
-    spurt $fh, "new text\n";
+    $fh.print("new text\n");
     Failed to write bytes to filehandle: bad file descriptor
 
 =item write-only mode, C<:w>
@@ -168,8 +168,8 @@ the file if it does exist, e.g.:
 Read-related methods will fail in this mode:
 
     my $fh = open("test", :w);
-    spurt $fh, "stuff\n";
-    spurt $fh, "more stuff\n";
+    $fh.print("stuff\n");
+    $fh.print("more stuff\n");
     $fh.seek(0, 0);   # return to the start of the file
     $fh.get();        # Reading from filehandle failed: bad file descriptor
 
