Fix a typo DenomT to DeT

--- a/Type/Rational.pod
+++ b/Type/Rational.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Number stored as numerator and denominator
 
-    role Rational[::NuT, ::DenomT] does Real { ... }
+    role Rational[::NuT, ::DeT] does Real { ... }
 
 C<Rational> is the common role for numbers that are stored as pairs of
 numerator and denominator. It is parameterized by the types of the numerator
@@ -16,7 +16,7 @@ Built into Perl 6 are L<Rat> and L<FatRat>, which both do the C<Rational> role.
 
 =head2 method new
 
-    method new(NuT:D $numerator, DenomT:D $denominator) returns Rational:D
+    method new(NuT:D $numerator, DeT:D $denominator) returns Rational:D
 
 Creates a new rational object from numerator and denominator.
 
@@ -28,7 +28,7 @@ Returns the numerator.
 
 =head2 method denominator
 
-    method denominator(Rational:D:) returns DenomT:D
+    method denominator(Rational:D:) returns DeT:D
 
 Returns the denominator.
 
