Added docs for method of in class Array

--- a/Type/Array.pod
+++ b/Type/Array.pod
@@ -219,4 +219,25 @@ Example:
     my @bar = ( < 1 2 3 >, < 4 5 6 > );      # Normal array (of arrays)
     say @bar.shape;                          # (*)
 
+=head2 method of
+
+Defined as:
+
+    method of 
+
+Usage:
+
+    Array.of
+
+Returns the type constraint for the values of the invocant. By default,
+i.e. if no type constraint is given during declaration, the method
+returns C<(Mu)>.
+
+    my @a1 = 1, 'two', 3.14159;              # (no type constraint specified)
+    say @a1.of;                              # (Mu)
+
+    my Int @a2 = 1, 2, 3;                    # (values must be of type Int)
+    say @a2.of;                              # (Int)
+    @a2.push: 'd';                           # throws X::TypeCheck::Assignment
+
 =end pod
