Added docs for Array.default. AlexDaniel++

--- a/Type/Array.pod
+++ b/Type/Array.pod
@@ -219,6 +219,33 @@ Example:
     my @bar = ( < 1 2 3 >, < 4 5 6 > );      # Normal array (of arrays)
     say @bar.shape;                          # (*)
 
+=head2 method default
+
+Defined as:
+
+    method default
+
+Usage:
+
+    Array.default
+
+Returns the default value of the invocant, i.e. the value which is returned
+when trying to access an element in the C<Array> which has not been
+previously initialized or when accessing an element which has explicitly
+been set to C<Nil>. Unless the C<Array> is declared as having a default
+value by using the L<is default|/routine/is default> trait the method returns
+the type object C<(Any)>.
+
+    my @a1 = 1, "two", 2.718;
+    say @a1.default;                                       # (Any)
+    say @a1[4];                                            # (Any)
+
+    my @a2 is default(17) = 1, "two", 3;
+    say @a2.default;                                       # 17
+    say @a2[4];                                            # 17
+    @a2[1] = Nil;                                          # (resets element to its default)
+    say @a2[1];                                            # 17
+
 =head2 method of
 
 Defined as:
