--- a/Type/Lock.pod
+++ b/Type/Lock.pod
@@ -13,9 +13,11 @@ I<critical section>).
     my $x = 0;
     my $l = Lock.new;
     await for (^10).map: {
-        $l.protect({ $x++ });
+        start { 
+            $l.protect({ $x++ }); 
+        }
     }
-    say $x;         #
+    say $x;         # 10
 
 Locks are reentrant, that is, a thread that holds the lock can lock it again
 without blocking.
