Had forgotten to remove a 'for' statement that should not be there

--- a/Type/Lock.pod
+++ b/Type/Lock.pod
@@ -12,7 +12,7 @@ I<critical section>).
 
     my $x = 0;
     my $l = Lock.new;
-    await for (^10).map: {
+    await (^10).map: {
         start { 
             $l.protect({ $x++ }); 
         }
