--- a/Language/contributors.pod
+++ b/Language/contributors.pod
@@ -837,6 +837,7 @@ L<Pull Request|/language/glossary#Pull_Request> with the required change(s).
   Daniel Toma
   Nathan Torkington
   Timothy Totten
+  Itsuki Toyota
   John J. Trammell
   Matt S. Trout
   Nat Tuck
