Fixed two broken links

--- a/Type/Bag.pod
+++ b/Type/Bag.pod
@@ -12,7 +12,7 @@ signifying how many copies of that element are considered "in the bag".  (For
 I<mutable> bags, see L<BagHash> instead.)
 
 C<Bag>s are often used for performing weighted random selections - see
-L<.pick|method pick> and L<.roll|method roll>.
+L<.pick|pick> and L<.roll|roll>.
 
 Objects/values of any type are allowed as bag elements.  Within a C<Bag>, items
 that would compare positively with the L<===> operator are considered the same
