--- a/Language/5to6-perlfunc.pod
+++ b/Language/5to6-perlfunc.pod
@@ -660,7 +660,7 @@ Works as in Perl 5, and can also be used as a method: C<%hash.keys>
 
 =item kill SIGNAL
 
-Now part of the C<Proc::ASync> class, but looks to work as in Perl 5.
+Now part of the L<Proc::Async> class, but looks to work as in Perl 5.
 
 =head2 last
 
